# fluent-form-chat

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: tauri-build.js  tauri-dev.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChatPage.tsx  ConversationSidebar.tsx  CreateAgentDialog.tsx  DynamicForm.tsx  LoadingMessage.tsx  MessageBubble.tsx  StreamingText.tsx  ToolCallDisplay.tsx  ViewEditAgentDialog.tsx
src/contexts/: ConversationContext.tsx
src/pages/: Agents.tsx  ChatPage.tsx  Index.tsx
src/services/: chatApi.ts
src/types/: chat.ts
